# elf

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
elf/: Cargo.toml
elf/src/: lib.rs
elf/src/parsed/: dynamic.rs  header.rs  mod.rs  relocation.rs  section.rs  segment.rs  symbol.rs
elf/src/raw/: dynamic.rs  header.rs  mod.rs  relocation.rs  symbol.rs
elfinfo/: Cargo.toml
elfinfo/src/: main.rs
examples/: Makefile  main.c
examples/single-pie/: Makefile  hello.s
src/: elf.rs  elf64.rs  lib.rs  main.rs
src/builder/: mod.rs
src/elf/: mod.rs
src/elf64/: dynamic.rs  header.rs  mod.rs  parsed.rs  raw.rs  relocation_table.rs  string_table.rs  symbol_table.rs
src/parsed/: header.rs  mod.rs  section.rs  segment.rs
src/raw/: dynamic.rs  header.rs  mod.rs  string.rs
