[package]
name = "elfinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
elf = { path = "../elf" }
enumflags2 = "0.7.7"
memmap2 = "0.6.1"
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0"
